vault/bsc/probes/probe_ternary_free.expected.stderr
<probe>:14:12: error: memory leak of value: `q`
    return 0;
           ^
<probe>:14:12: error: memory leak of value: `p`
2 errors generated.
